metricas feitas e inicialização de game

--- a/Public/dashboard/dashSite.html
+++ b/Public/dashboard/dashSite.html
@@ -14,11 +14,11 @@
 
 </head>
 
-<body>
+<body onload="validarSessao()">
     <nav id="navbar">
         <a onclick="limparSessaohome()" href="../index.html"><img id="logo" src="../assets/index/LogoBlack.png" alt="LogoBlack"></a>
         <ul>
-            <li class="dropdown"><a href="foto">Fotografia</a>
+            <li class="dropdown"><a>Fotografia</a>
 
                 <div class="dropdown-menu">
                     <a href="../paginas/Objetos.html">Objetos</a>
@@ -27,17 +27,16 @@
                 </div>
             </li>
 
-            <li class="dropdown2"> <a href="games">Games</a>
+            <li class="dropdown2"> <a>Games</a>
 
                 <div class="dropdown-menu2">
                     <a href="../paginas/games/iniciante.html">Quiz iniciante</a>
                     <a href="../paginas/games/experiente.html">Quiz Experiente</a>
-                    <a href="../paginas/games/cruzadinha.html">Cruzadinha</a>
                 </div>
 
             </li>
 
-            <li class="dropdown3"> <a href="dev">Devs</a>
+            <li class="dropdown3"> <a>Info</a>
 
                 <div class="dropdown-menu3">
                     <a href="../paginas/dev/metricas.html">Metricas</a>
