--- a/Public/index.html
+++ b/Public/index.html
@@ -58,7 +58,7 @@
   <div id="depoimento" class="ContainerGrande">
     <div class="SegundaPagina">
       <div class="textoPaginaP3">
-        <p>A fotografia transforma</p>
+        <h1>A fotografia transforma</h1>
         <p>O ato de fotografar vai muito alem de só clicar, em está na forma em que você expressa a sua visão sobre o
           mundo</p>
         <a href="depoimentos.html"><button>Saiba mais</button></a>
@@ -78,7 +78,7 @@
             <h3>Objetos</h3>
             <p>Fotografia de objetos é a arte de capturar a essência e a beleza silenciosa dos detalhes inanimados,
               transformando o comum em extraordinário através das lentes.</p>
-            <a href="cadastro.html">Ver mais</a>
+            <a href="paginas/fotos/Objetos.html">Ver mais</a>
           </div>
         </div>
         <div class="card">
@@ -87,7 +87,7 @@
             <h3>Pessoas</h3>
             <p>Fotografia de pessoas é a arte de eternizar emoções, capturando a essência e a singularidade de cada
               indivíduo através de um olhar sensível e atento.</p>
-            <a href="cadastro.html">Ver mais</a>
+            <a href="paginas/fotos/Pessoaa.html">Ver mais</a>
           </div>
         </div>
         <div class="card">
@@ -96,7 +96,7 @@
             <h3>Paisagens</h3>
             <p>Fotografia de paisagens é a arte de capturar a majestade e a serenidade da natureza, revelando a
               grandiosidade dos cenários com um olhar contemplativo.</p>
-            <a href="cadastro.html">Ver mais</a>
+            <a href="paginas/fotos/paisagem.html">Ver mais</a>
           </div>
         </div>
       </div>
