inicialização de quiz V.2 - FInalizada

--- a/Public/dashboard/dashSite.html
+++ b/Public/dashboard/dashSite.html
@@ -30,8 +30,8 @@
             <li class="dropdown2"> <a>Games</a>
 
                 <div class="dropdown-menu2">
-                    <a href="../paginas/games/iniciante.html">Quiz iniciante</a>
-                    <a href="../paginas/games/experiente.html">Quiz Experiente</a>
+                    <a href="../dashboard/Game.html">Quiz iniciante</a>
+                    <a href="../dashboard/GameExperiente.html">Quiz Experiente</a>
                 </div>
 
             </li>
@@ -39,8 +39,7 @@
             <li class="dropdown3"> <a>Info</a>
 
                 <div class="dropdown-menu3">
-                    <a href="../paginas/dev/metricas.html">Metricas</a>
-                    <a href="../paginas/dev/chat.html">Chat-Bot</a>
+                    <a href="../dashboard/metricas.html">Metricas</a>
                 </div>
             </li>
         </ul>
