inicio da plotagem de dados - V.1

--- a/Public/dashboard/dashSite.html
+++ b/Public/dashboard/dashSite.html
@@ -14,7 +14,7 @@
 
 </head>
 
-<body onload="validarSessao()">
+<body >
     <nav id="navbar">
         <a onclick="limparSessaohome()" href="../index.html"><img id="logo" src="../assets/index/LogoBlack.png" alt="LogoBlack"></a>
         <ul>
